Translate missing interfaces
Co-Authored-By: Jorge Chávez Badillo  <65170387+A01749448@users.noreply.github.com>
Co-Authored-By: A01749373 <58440787+A01749373@users.noreply.github.com>

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -22,6 +22,7 @@
   "darkProtanomalyTheme": "Dark Mode (Protanomaly)",
   "darkDeuteranomalyTheme": "Dark Mode (Deuteranomaly)",
   "darkTritanomalyTheme": "Dark Mode (Tritanomaly)",
+  "restoreToDefault": "Restore to default",
 
   "__loginForm__": "----------Login Interface----------",
   "signIn": "Sign in",
@@ -53,6 +54,26 @@
   "allAgents": "All agents",
   "nameAgent": "Agent Jim Halpert",
   "placeholder": "Search...",
+  "addAgent": "Add Agent",
+  "name": "Name",
+  "emailAgent": "Email",
+  "passwordAgent": "Password",
+  "phoneNumber": "Phone Number",
+  "administratorEmail": "Administrator Email",
+  "profilePicture": "Profile Picture",
+  "save": "Save",
+  "addManager": "Add Manager",
+  "emailManager": "Email",
+  "passwordManager": "Password",
+  "administrator": "Administrator",
+  "selectRoleAdd": "Select role to add",
+  "agentButton": "Agent",
+  "adminQA": "Admin/QA",
+  "noActiveCalls": "No active calls right now",
+  "refresh": "Refresh",
+  "giveFeedback": "Give feedback:",
+  "rating": "Rating:",
+  "send": "Send",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "About",
@@ -111,13 +132,44 @@
   "phone": "Phone number:",
   "clientLocation": "Client's location:",
   "quantity": "Quantity:",
-  "accountNumber": "Account number:",
+  "accountNumber": "Account Number:",
   "police": "Police Service",
-  "destination": "Destination:",
+  "clientDestination": "Client's destination:",
   "uberEats": "Uber Eats Service",
   "order": "Order:",
   "uber": "Uber Service",
   "askForService": "Ask for service",
+  "serviceConfirmation": "Service Confirmation",
+  "agentBtn": "agent",
+  "tags": "tags",
+  "informationSent": "Information Sent!",
+  "confirmed": "confirmed",
+  "cellPhone": "Cell phone",
+  "oxxoInfo": "OXXO INFO:",
+  "street": "Street:",
+  "state": "State:",
+  "colony": "Colony:",
+  "zipCode": "Zip Code:",
+  "country": "Country:",
+  "reference": "Reference:",
+  "sendInfo": "Send info",
+  "clientLocationReference": "Client location reference:",
+  "clientStatement": "Client statement:",
+  "driver": "Driver:",
+  "carModel": "Car model:",
+  "carPlate": "Car plate:",
+  "carColor": "Car color:",
+  "arrivalTime": "Arrival time:",
+  "rideTime": "Ride time:",
+  "soda": "Soda:",
+  "chips": "Chips:",
+  "hotDog": "Hot Dog:",
+  "chocolate": "Chocolate:",
+  "coffee": "Coffee:",
+  "aspirin": "Aspirin:",
+  "total": "Total:",
+  "deliveryName": "Delivery Name:",
+  "deliveryTime": "Delivery Time:",
 
   "__navBar": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -164,5 +216,15 @@
   "positive": "% Positive",
   "mixed": "% Mixed",
   "neutral": "% Neutral",
-  "negative": "% Negative"
+  "negative": "% Negative",
+
+  "__Profile__": "----------------Profile interface--------------",
+  "emailProfile": "Email",
+  "logOut": "Log Out",
+
+  "__QualityControl__": "----------------Quality Control interface--------------",
+  "noFeedbackAvailable": "No feedback available",
+
+  "__User__": "----------------User interface--------------",
+  "loading": "Loading..."
 }
