Revert "Merge branch 'Development' of https://github.com/Amazon-Connect-Equipo-1/Front-end into Development"
This reverts commit 1ab4694940d8293a9ce6d14e377d47dbc6df43fc, reversing
changes made to 1d84d3a11d09a7a434a589a10fa3c267fa27c794.

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -22,7 +22,6 @@
   "darkProtanomalyTheme": "Dark Mode (Protanomaly)",
   "darkDeuteranomalyTheme": "Dark Mode (Deuteranomaly)",
   "darkTritanomalyTheme": "Dark Mode (Tritanomaly)",
-  "restoreToDefault": "Restore to default",
 
   "__loginForm__": "----------Login Interface----------",
   "signIn": "Sign in",
@@ -54,26 +53,6 @@
   "allAgents": "All agents",
   "nameAgent": "Agent Jim Halpert",
   "placeholder": "Search...",
-  "addAgent": "Add Agent",
-  "name": "Name",
-  "emailAgent": "Email",
-  "passwordAgent": "Password",
-  "phoneNumber": "Phone Number",
-  "administratorEmail": "Administrator Email",
-  "profilePicture": "Profile Picture",
-  "save": "Save",
-  "addManager": "Add Manager",
-  "emailManager": "Email",
-  "passwordManager": "Password",
-  "administrator": "Administrator",
-  "selectRoleAdd": "Select role to add",
-  "agentButton": "Agent",
-  "adminQA": "Admin/QA",
-  "noActiveCalls": "No active calls right now",
-  "refresh": "Refresh",
-  "giveFeedback": "Give feedback:",
-  "rating": "Rating:",
-  "send": "Send",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "About",
@@ -132,44 +111,13 @@
   "phone": "Phone number:",
   "clientLocation": "Client's location:",
   "quantity": "Quantity:",
-  "accountNumber": "Account Number:",
+  "accountNumber": "Account number:",
   "police": "Police Service",
-  "clientDestination": "Client's destination:",
+  "destination": "Destination:",
   "uberEats": "Uber Eats Service",
   "order": "Order:",
   "uber": "Uber Service",
   "askForService": "Ask for service",
-  "serviceConfirmation": "Service Confirmation",
-  "agentBtn": "agent",
-  "tags": "tags",
-  "informationSent": "Information Sent!",
-  "confirmed": "confirmed",
-  "cellPhone": "Cell phone",
-  "oxxoInfo": "OXXO INFO:",
-  "street": "Street:",
-  "state": "State:",
-  "colony": "Colony:",
-  "zipCode": "Zip Code:",
-  "country": "Country:",
-  "reference": "Reference:",
-  "sendInfo": "Send info",
-  "clientLocationReference": "Client location reference:",
-  "clientStatement": "Client statement:",
-  "driver": "Driver:",
-  "carModel": "Car model:",
-  "carPlate": "Car plate:",
-  "carColor": "Car color:",
-  "arrivalTime": "Arrival time:",
-  "rideTime": "Ride time:",
-  "soda": "Soda:",
-  "chips": "Chips:",
-  "hotDog": "Hot Dog:",
-  "chocolate": "Chocolate:",
-  "coffee": "Coffee:",
-  "aspirin": "Aspirin:",
-  "total": "Total:",
-  "deliveryName": "Delivery Name:",
-  "deliveryTime": "Delivery Time:",
 
   "__navBar": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -216,15 +164,5 @@
   "positive": "% Positive",
   "mixed": "% Mixed",
   "neutral": "% Neutral",
-  "negative": "% Negative",
-
-  "__Profile__": "----------------Profile interface--------------",
-  "emailProfile": "Email",
-  "logOut": "Log Out",
-
-  "__QualityControl__": "----------------Quality Control interface--------------",
-  "noFeedbackAvailable": "No feedback available",
-
-  "__User__": "----------------User interface--------------",
-  "loading": "Loading..."
+  "negative": "% Negative"
 }
