--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -22,7 +22,6 @@
   "darkProtanomalyTheme": "Modo Oscuro (Protanomaly)",
   "darkDeuteranomalyTheme": "Modo Oscuro (Deuteranomaly)",
   "darkTritanomalyTheme": "Modo Oscuro (Tritanomaly)",
-  "restoreToDefault": "Restablecer por defecto",
 
   "__loginForm__": "----------Login Interface----------",
   "signIn": "Iniciar sesión",
@@ -54,26 +53,6 @@
   "allAgents": "Todos los agentes",
   "nameAgent": "Agente Jim Halpert",
   "placeholder": "Buscar...",
-  "addAgent": "Agregar Agente",
-  "name": "Nombre",
-  "emailAgent": "Email",
-  "passwordAgent": "Contraseña",
-  "phoneNumber": "Teléfono",
-  "administratorEmail": "Email del Administrador ",
-  "profilePicture": "Foto de Perfil",
-  "save": "Guardar",
-  "addManager": "Agregar Manager",
-  "emailManager": "Email",
-  "passwordManager": "Contraseña",
-  "administrator": "Administrador",
-  "selectRoleAdd": "Seleccione el rol a añadir",
-  "agentButton": "Agente",
-  "adminQA": "Admin/QA",
-  "noActiveCalls": "No hay llamadas activas en este momento",
-  "refresh": "Refrescar",
-  "giveFeedback": "Dar retroalimentación:",
-  "rating": "Puntuación:",
-  "send": "Enviar",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "Acerca de",
@@ -139,37 +118,6 @@
   "order": "Orden:",
   "uber": "Servicio Uber",
   "askForService": "Solicite el servicio",
-  "serviceConfirmation": "Confirmación de Servicio",
-  "agentBtn": "agente",
-  "tags": "tags",
-  "informationSent": "¡Información enviada!",
-  "confirmed": "confirmado",
-  "cellPhone": "Celular",
-  "oxxoInfo": "INFO OXXO:",
-  "street": "Calle:",
-  "state": "Estado:",
-  "colony": "Colonia:",
-  "zipCode": "Código Postal:",
-  "country": "País:",
-  "reference": "Referencia:",
-  "sendInfo": "Enviar info",
-  "clientLocationReference": "Referencia de la ubicación del cliente:",
-  "clientStatement": "Declaración del cliente:",
-  "driver": "Conductor:",
-  "carModel": "Modelo de auto:",
-  "carPlate": "Placa del auto:",
-  "carColor": "Color del auto:",
-  "arrivalTime": "Hora de llegada:",
-  "rideTime": "Tiempo de viaje:",
-  "soda": "Refresco:",
-  "chips": "Papas:",
-  "hotDog": "Hot Dog:",
-  "chocolate": "Chocolate:",
-  "coffee": "Café:",
-  "aspirin": "Aspirina:",
-  "total": "Total:",
-  "deliveryName": "Nombre de la entrega:",
-  "deliveryTime": "Tiempo de entrega:",
 
   "__navBar__": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -216,15 +164,6 @@
   "positive": "% Positivo",
   "mixed": "% Mixto",
   "neutral": "% Neutro",
-  "negative": "% Negativo",
+  "negative": "% Negativo"
 
-  "__Profile__": "----------------Profile interface--------------",
-  "emailProfile": "Email",
-  "logOut": "Cerrar sesión",
-
-  "__QualityControl__": "----------------Quality Control interface--------------",
-  "noFeedbackAvailable": "No hay comentarios disponibles",
-
-  "__User__": "----------------User interface--------------",
-  "loading": "Cargando..."
 }
