--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -22,7 +22,6 @@
   "darkProtanomalyTheme": "Mode sombre (Protanomalie)",
   "darkDeuteranomalyTheme": "Mode sombre (Deutéranomalie)",
   "darkTritanomalyTheme": "Mode sombre (Tritanomalie)",
-  "restoreToDefault": "Rétablir par défaut",
 
   "__loginForm__": "----------Login Interface----------",
   "signIn": "Se connecter",
@@ -54,26 +53,6 @@
   "allAgents": "Tous les acteurs",
   "nameAgent": "L'agent Jim Halpert",
   "placeholder": "Recherche...",
-  "addAgent": "Ajouter un agent",
-  "name": "Nom",
-  "emailAgent": "Courriel",
-  "passwordAgent": "Mot de passe",
-  "phoneNumber": "Numéro de téléphone",
-  "administratorEmail": "Courriel de l'administrateur",
-  "profilePicture": "Photo de profil",
-  "save": "Sauvez",
-  "addManager": "Ajouter un gestionnaire",
-  "emailManager": "Courriel",
-  "passwordManager": "Mot de passe",
-  "administrator": "Administrateur",
-  "selectRoleAdd": "Sélectionnez le rôle à ajouter",
-  "agentButton": "Agent",
-  "adminQA": "Admin/QA",
-  "noActiveCalls": "Aucun appel actif pour le moment",
-  "refresh": "Rafraîchir",
-  "giveFeedback": "Donnez votre avis:",
-  "rating": "Évaluation:",
-  "send": "Envoyer",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "À propos de",
@@ -139,37 +118,6 @@
   "order": "Ordre:",
   "uber": "Service Uber",
   "askForService": "Demande de service",
-  "serviceConfirmation": "Confirmation de service",
-  "agentBtn": "agent",
-  "tags": "tags",
-  "informationSent": "Information envoyée!",
-  "confirmed": "confirmé",
-  "cellPhone": "Téléphone",
-  "oxxoInfo": "INFO OXXO:",
-  "street": "Rue:",
-  "state": "État:",
-  "colony": "Colonie:",
-  "zipCode": "Code postal:",
-  "country": "Pays:",
-  "reference": "Référence:",
-  "sendInfo": "Envoyer l'info",
-  "clientLocationReference": "Référence de l'emplacement du client:",
-  "clientStatement": "Déclaration du client:",
-  "driver": "conducteur:",
-  "carModel": "Modèle de véhicule:",
-  "carPlate": "Plaque de voiture:",
-  "carColor": "Couleur de la voiture:",
-  "arrivalTime": "Heure d'arrivée:",
-  "rideTime": "Durée du trajet:",
-  "soda": "Soda:",
-  "chips": "Puces:",
-  "hotDog": "Hot Dog:",
-  "chocolate": "Chocolat:",
-  "coffee": "Café:",
-  "aspirin": "Aspirine:",
-  "total": "Total:",
-  "deliveryName": "Nom de livraison:",
-  "deliveryTime": "Délai de livraison:",
 
   "__navBar": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -216,15 +164,5 @@
   "positive": "% Positif",
   "mixed": "% Mixte",
   "neutral": "% Neutre",
-  "negative": "% Négatif",
-
-  "__Profile__": "----------------Profile interface--------------",
-  "emailProfile": "Courriel",
-  "logOut": "Déconnexion",
-
-  "__QualityControl__": "----------------Quality Control interface--------------",
-  "noFeedbackAvailable": "Aucun feedback disponible",
-
-  "__User__": "----------------User interface--------------",
-  "loading": "Chargement..."
+  "negative": "% Négatif"
 }
