Translation of mising interfaces

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -74,6 +74,8 @@
   "giveFeedback": "Give feedback:",
   "rating": "Rating:",
   "send": "Send",
+  "selectAgent": "Select one agent",
+  "agents": "Agents",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "About",
@@ -102,6 +104,7 @@
   "work": "Work",
   "business": "Business",
   "theft": "Theft",
+  "noRecordings": "No recordings found",
 
   "__userType__": "----------User Type Interface----------",
   "selectUserType": "Select user type:",
@@ -124,6 +127,7 @@
   "requestNewPlastic": "Request New Plastic",
   "requestThirdPartyServices": "Request Third Party Services",
   "selectBestVideos": "Select Best Videos",
+  "tutorials": "Tutorials",
 
   "__thirdPartyServices__": "----------Third Party Services Interface----------",
   "thirdPartyServices": "Third Party Services",
@@ -144,7 +148,7 @@
   "tags": "tags",
   "informationSent": "Information Sent!",
   "confirmed": "confirmed",
-  "cellPhone": "Cell phone",
+  "cellPhone": "Cell phone:",
   "oxxoInfo": "OXXO INFO:",
   "street": "Street:",
   "state": "State:",
@@ -170,6 +174,7 @@
   "total": "Total:",
   "deliveryName": "Delivery Name:",
   "deliveryTime": "Delivery Time:",
+  "cancel": "Cancel",
 
   "__navBar": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -191,11 +196,25 @@
   "cancel-card": "Cancel-Card",
   "card-declined": "Card-Declined",
   "credit-card": "Credit-Card",
-  "inssurance": "Inssurance",
+  "insurance": "Insurance",
   "withdrawal": "Withdrawal",
   "loans": "Loans",
   "problem-solved": "Problem-Solved",
   "investments": "Investments",
+  "3rd-party-services": "Third-Party-Services",
+  "a-entire-call-negative": "Agent-Entire-Call-Negative",
+  "c-entire-call-negative": "Client-Entire-Call-Negative",
+  "c-entire-call-positive": "Client-Entire-Call-Positive",
+  "c-negative-to-positive": "Customer-Negative-to-Positive",
+  "c-positive-to-negative": "Customer-Positive-to-Negative",
+  "c-neutral-to-positive": "Customer-Neutral-to-Positive",
+  "c-neutral-to-negative": "Customer-Neutral-to-Negative",
+  "ended-positive": "Ended-Positive",
+  "ended-negative": "Ended-Negative",
+  "stolen-card": "Stolen-Card",
+  "savings-account": "Savings-Account",
+  "problem-not-solved": "Problem-Not-Solved",
+  "transfer": "Transfer",
 
   "__Alerts__": "----------------Alert texts in interfaces--------------",
   "validEmailPwd": "Must be a valid email and password",
