--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -74,6 +74,8 @@
   "giveFeedback": "Dar retroalimentación:",
   "rating": "Puntuación:",
   "send": "Enviar",
+  "selectAgent": "Seleccione un agente",
+  "agents": "Agentes",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "Acerca de",
@@ -102,6 +104,7 @@
   "work": "Trabajo",
   "business": "Empresa",
   "theft": "Robo",
+  "noRecordings": "No se han encontrado grabaciones",
 
   "__userType__": "----------User Type Interface----------",
   "selectUserType": "Seleccionar tipo de usuario:",
@@ -124,6 +127,7 @@
   "requestNewPlastic": "Solicitar Nuevo Plástico",
   "requestThirdPartyServices": "Solicitar Servicios de Terceros",
   "selectBestVideos": "Seleccionar los Mejores Vídeos",
+  "tutorials": "Tutoriales",
 
   "__thirdPartyServices__": "----------Third Party Services Interface----------",
   "thirdPartyServices": "Servicio de Terceros",
@@ -134,7 +138,7 @@
   "quantity": "Cantidad:",
   "accountNumber": "Número de cuenta:",
   "police": "Servicio de Policía",
-  "destination": "Destino:",
+  "clientDestination": "Destino del cliente:",
   "uberEats": "Servicio Uber Eats",
   "order": "Orden:",
   "uber": "Servicio Uber",
@@ -144,7 +148,7 @@
   "tags": "tags",
   "informationSent": "¡Información enviada!",
   "confirmed": "confirmado",
-  "cellPhone": "Celular",
+  "cellPhone": "Celular:",
   "oxxoInfo": "INFO OXXO:",
   "street": "Calle:",
   "state": "Estado:",
@@ -170,6 +174,7 @@
   "total": "Total:",
   "deliveryName": "Nombre de la entrega:",
   "deliveryTime": "Tiempo de entrega:",
+  "cancel": "Cancelar",
 
   "__navBar__": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -191,11 +196,25 @@
   "cancel-card": "Cancelar-Tarjeta",
   "card-declined": "Tarjeta-Declinada",
   "credit-card": "Tarjeta-de Crédito",
-  "inssurance": "Seguro",
+  "insurance": "Seguro",
   "withdrawal": "Retiros",
   "loans": "Préstamos",
   "problem-solved": "Problema-Resuelto",
   "investments": "Inversiones",
+  "3rd-party-services": "Servicios-de-Terceros",
+  "a-entire-call-negative": "Agente-Llamada-Completa-Negativa",
+  "c-entire-call-negative": "Cliente-Llamada-Completa-Negativa",
+  "c-entire-call-positive": "Cliente-Llamada-Completa-Positiva",
+  "c-negative-to-positive": "Cliente-Negativo-a-Positivo",
+  "c-positive-to-negative": "Cliente-Positivo-a-Negativo",
+  "c-neutral-to-positive": "Cliente-Neutral-a-Positivo",
+  "c-neutral-to-negative": "Cliente-Negativo-a-Positivo-Negativo",
+  "ended-positive": "Terminó-Positivo",
+  "ended-negative": "Terminó-Negativo",
+  "stolen-card": "Tarjeta-Robada",
+  "savings-account": "Cuenta-de-Ahorro",
+  "problem-not-solved": "Problema-No-Resuelto",
+  "transfer": "Transferencia",
 
   "__Alerts__": "----------------Alert texts in interfaces--------------",
   "validEmailPwd": "El email y contraseña deben de ser válidos",
