--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -74,6 +74,8 @@
   "giveFeedback": "Donnez votre avis:",
   "rating": "Évaluation:",
   "send": "Envoyer",
+  "selectAgent": "Sélectionnez un agent",
+  "agents": "Agents",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "À propos de",
@@ -102,6 +104,7 @@
   "work": "Travail",
   "business": "Entreprise",
   "theft": "Vol",
+  "noRecordings": "Aucun enregistrement trouvé",
 
   "__userType__": "----------User Type Interface----------",
   "selectUserType": "Sélectionnez le type d'utilisateur:",
@@ -124,6 +127,7 @@
   "requestNewPlastic": "Demander un Nouveau Plastique",
   "requestThirdPartyServices": "Demander le Service d'un Tiers",
   "selectBestVideos": "Sélectionnez les Meilleures Vidéos",
+  "tutorials": "Tutoriels",
 
   "__thirdPartyServices__": "----------Third Party Services Interface----------",
   "thirdPartyServices": "Services de Tierce Partie",
@@ -134,7 +138,7 @@
   "quantity": "Quantité:",
   "accountNumber": "Numéro de compte:",
   "police": "Service de police",
-  "destination": "Destination:",
+  "clientDestination": "Destination des client:",
   "uberEats": "Service Uber Eats",
   "order": "Ordre:",
   "uber": "Service Uber",
@@ -144,7 +148,7 @@
   "tags": "tags",
   "informationSent": "Information envoyée!",
   "confirmed": "confirmé",
-  "cellPhone": "Téléphone",
+  "cellPhone": "Téléphone:",
   "oxxoInfo": "INFO OXXO:",
   "street": "Rue:",
   "state": "État:",
@@ -170,6 +174,7 @@
   "total": "Total:",
   "deliveryName": "Nom de livraison:",
   "deliveryTime": "Délai de livraison:",
+  "cancel": "Annuler",
 
   "__navBar": "----------------------NavBar Items------------------------------",
   "Dashboard": "Dashboard",
@@ -191,11 +196,25 @@
   "cancel-card": "Carte-d'annulation",
   "card-declined": "Carte-Refusée",
   "credit-card": "Carte-de Crédit",
-  "inssurance": "Assurance",
+  "insurance": "Assurance",
   "withdrawal": "Retrait",
   "loans": "Prêts",
   "problem-solved": "Problème-Résolu",
   "investments": "Investissements",
+  "3rd-party-services": "Services-de-Tiers",
+  "a-entire-call-negative": "Agent-Entire-Appel-Négatif",
+  "c-entire-call-negative": "Client-Entire-Appel-Négatif",
+  "c-entire-call-positive": "Client-Entité-Appel-Positif",
+  "c-negative-to-positive": "Client-Négatif-à-Positif",
+  "c-positive-to-negative": "Client-Positifs-à-Négatifs",
+  "c-neutral-to-positive": "Clients-Neutres-à-Positifs",
+  "c-neutral-to-negative": "Client-Neutre-à-Négatif",
+  "ended-positive": "Terminé-Positif",
+  "ended-negative": "Terminé-Négatif",
+  "stolen-card": "Carte-Volée",
+  "savings-account": "Compte-D'épargne",
+  "problem-not-solved": "Problème-Non-Résolu",
+  "transfer": "Transfert",
 
   "__Alerts__": "----------------Alert texts in interfaces--------------",
   "validEmailPwd": "Doit être un e-mail et un mot de passe valides",
