Translation recordings fixed
Co-Authored-By: Jorge Chávez Badillo  <65170387+A01749448@users.noreply.github.com>
Co-Authored-By: A01750185 <58440701+A01750185@users.noreply.github.com>

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -76,6 +76,8 @@
   "send": "Send",
   "selectAgent": "Select one agent",
   "agents": "Agents",
+  "addUser": "Add user",
+  "return": "Return",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "About",
