--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -76,6 +76,8 @@
   "send": "Enviar",
   "selectAgent": "Seleccione un agente",
   "agents": "Agentes",
+  "addUser": "Agregar usuario",
+  "return": "Regresar",
 
   "__recordings__": "----------Recordings Interface----------",
   "about": "Acerca de",
@@ -93,9 +95,9 @@
   "search": "Buscar",
   "acceptFeedback": "Aceptar los Comentarios",
   "feedbackExample": "Buen trabajo Dwight, la próxima vez intenta hablar más alto.",
-  "call": "Llamar",
-  "startCall": "Empezar llamada:",
-  "endCall": "Terminar llamada:",
+  "call": "Llamada",
+  "startCall": "Inicio de la llamada:",
+  "endCall": "Termino de la llamada:",
   "analysis": "Análisis",
   "agentInterruptions": "Interrupciones de agentes:",
   "userInterruptions": "Interrupciones del usuario:",
