--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -29,6 +29,32 @@
   "password": "Password",
   "fyp": "Forgot your password?",
   "signInBtn": "Sign in",
+  "developmentTeam": "Development Team",
+  "teachers": "Collaborating teachers",
+  "projectManagers": "Project Managers",
+  "projectManagerBackEnd": "Project Manager in charge of BackEnd",
+  "projectManagerFrontEnd": "Project Manager in charge of FrontEnd",
+  "projectManagerAWS": "Project Manager in charge of AWS",
+  "projectManagerDocumentation": "Project Manager in charge of Documentation",
+  "backendManagers": "Backend functionality managers",
+  "thirdPartyModule": "ThirdParty services module",
+  "emailNotification": "Email notification service",
+  "backendWorkTeam": "Backend work team",
+  "documentation": "Documentation",
+  "frontendManagers": "Frontend functionality managers",
+  "developmentInterfaces": "Development of interfaces",
+  "designTesting": "Design and testing",
+  "frontendWorkTeam": "Frontend work team",
+  "dashboardDocumentation": "Dashboard creation, documentation",
+  "tutorialsDocumentation": "Tutorials, documentation",
+  "systemTranslation": "System translation, documentation",
+  "AWSManagers": "AWS functionality managers",
+  "videoData": "Video data processing",
+  "screenRecording": "Screen recording, voice ID",
+  "videoProcessing": "Video processing",
+  "documentationManagers": "Documentation managers",
+  "testReports": "Test reports, test plans",
+  "wiki": "Wiki, documentation",
 
   "__recoverPassword__": "----------Recover Password Interface----------",
   "changePassword": "Recover password",
