--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -29,6 +29,32 @@
   "password": "Contraseña",
   "fyp": "¿Olvidaste tu contraseña?",
   "signInBtn": "Iniciar sesión",
+  "developmentTeam": "Equipo de desarrollo",
+  "teachers": "Profesores colaboradores",
+  "projectManagers": "Líderes de proyecto",
+  "projectManagerBackEnd": "Líder de proyecto a cargo del BackEnd",
+  "projectManagerFrontEnd": "Líder de proyecto a cargo del FrontEnd",
+  "projectManagerAWS": "Líder de proyecto a cargo de AWS",
+  "projectManagerDocumentation": "Líder de proyecto a cargo de la Documentación",
+  "backendManagers": "Encargados de la funcionalidad del backend",
+  "thirdPartyModule": "Módulo de servicios de terceros",
+  "emailNotification": "Servicio de notificación por correo electrónico",
+  "backendWorkTeam": "Equipo de trabajo de backend",
+  "documentation": "Documentación",
+  "frontendManagers": "Encargados de la funcionalidad del frontend",
+  "developmentInterfaces": "Desarrollo de interfaces",
+  "designTesting": "Diseño y pruebas",
+  "frontendWorkTeam": "Equipo de trabajo de frontend",
+  "dashboardDocumentation": "Creación de tableros, documentación",
+  "tutorialsDocumentation": "Tutoriales, documentación",
+  "systemTranslation": "Traducción del sistema, documentación",
+  "AWSManagers": "Encargados de la funcionalidad de AWS",
+  "videoData": "Procesamiento de datos de vídeo",
+  "screenRecording": "Grabación de pantalla, identificación de voz",
+  "videoProcessing": "Procesamiento de vídeo",
+  "documentationManagers": "Encargados de la documentación",
+  "testReports": "Reportes de prueba, planes de prueba",
+  "wiki": "Wiki, documentación",
 
   "__recoverPassword__": "----------Recover Password Interface----------",
   "changePassword": "Recuperar contraseña",
@@ -56,14 +82,14 @@
   "placeholder": "Buscar...",
   "addAgent": "Agregar Agente",
   "name": "Nombre",
-  "emailAgent": "Email",
+  "emailAgent": "Correo electrónico",
   "passwordAgent": "Contraseña",
   "phoneNumber": "Teléfono",
   "administratorEmail": "Email del Administrador ",
   "profilePicture": "Foto de Perfil",
   "save": "Guardar",
   "addManager": "Agregar Manager",
-  "emailManager": "Email",
+  "emailManager": "Correo electrónico",
   "passwordManager": "Contraseña",
   "administrator": "Administrador",
   "selectRoleAdd": "Seleccione el rol a añadir",
