--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -29,6 +29,32 @@
   "password": "Mot de passe",
   "fyp": "Vous avez oublié votre mot de passe?",
   "signInBtn": "Se connecter",
+  "developmentTeam": "Équipe de développement",
+  "teachers": "Enseignants en collaboration",
+  "projectManagers": "Responsables de projet",
+  "projectManagerBackEnd": "Chef de projet en charge du BackEnd",
+  "projectManagerFrontEnd": "Chef de projet en charge du FrontEnd",
+  "projectManagerAWS": "Chef de projet en charge de l'AWS",
+  "projectManagerDocumentation": "Chef de projet en charge de la documentation",
+  "backendManagers": "Gestionnaires de la fonctionnalité backend",
+  "thirdPartyModule": "Module de services aux tiers",
+  "emailNotification": "Service de notification par courriel",
+  "backendWorkTeam": "Équipe de travail backend",
+  "documentation": "Documentation",
+  "frontendManagers": "Gestionnaires de la fonctionnalité frontend",
+  "developmentInterfaces": "Développement d'interfaces",
+  "designTesting": "Conception et essais",
+  "frontendWorkTeam": "Équipe de travail frontend",
+  "dashboardDocumentation": "Création de tableaux de bord, documentation",
+  "tutorialsDocumentation": "Tutoriels, documentation",
+  "systemTranslation": "Traduction du système, documentation",
+  "AWSManagers": "Gestionnaires de fonctionnalités AWS",
+  "videoData": "Traitement des données vidéo",
+  "screenRecording": "Enregistrement d'écran, identification vocale",
+  "videoProcessing": "Traitement vidéo",
+  "documentationManagers": "Responsables de la documentation",
+  "testReports": "Rapports d'essai, plans d'essai",
+  "wiki": "Wiki, documentation",
 
   "__recoverPassword__": "----------Recover Password Interface----------",
   "changePassword": "Récupérer le mot de passe",
