--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -47,7 +47,7 @@
   "frontendWorkTeam": "Frontend work team",
   "dashboardDocumentation": "Dashboard creation, documentation",
   "tutorialsDocumentation": "Tutorials, documentation",
-  "systemTranslation": "System translation, documentation",
+  "systemTranslation": "System translation, navigation, documentation",
   "AWSManagers": "AWS functionality managers",
   "videoData": "Video data processing",
   "screenRecording": "Screen recording, voice ID",
