--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -47,7 +47,7 @@
   "frontendWorkTeam": "Équipe de travail frontend",
   "dashboardDocumentation": "Création de tableaux de bord, documentation",
   "tutorialsDocumentation": "Tutoriels, documentation",
-  "systemTranslation": "Traduction du système, documentation",
+  "systemTranslation": "Traduction du système, navigation, documentation",
   "AWSManagers": "Gestionnaires de fonctionnalités AWS",
   "videoData": "Traitement des données vidéo",
   "screenRecording": "Enregistrement d'écran, identification vocale",
