--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -47,7 +47,7 @@
   "frontendWorkTeam": "Equipo de trabajo de frontend",
   "dashboardDocumentation": "Creación de tableros, documentación",
   "tutorialsDocumentation": "Tutoriales, documentación",
-  "systemTranslation": "Traducción del sistema, documentación",
+  "systemTranslation": "Traducción del sistema, navegación, documentación",
   "AWSManagers": "Encargados de la funcionalidad de AWS",
   "videoData": "Procesamiento de datos de vídeo",
   "screenRecording": "Grabación de pantalla, identificación de voz",
