--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -274,5 +274,7 @@
 
   "__Error__": "----------------Error interface--------------",
   "notFound": "Not found",
-  "source": "The source requested could not be found on this server!"
+  "source": "The source requested could not be found on this server!",
+  "feedbackSubmitted": "Feedback submited successfuly",
+  "dataSubmitted": "Data submitted successfully"
 }
