update in translation
Co-Authored-By: Maikindustries <65171462+Maikindustries@users.noreply.github.com>
Co-Authored-By: Daniel García Barajas <77995765+DanielGB-Dev@users.noreply.github.com>

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -175,7 +175,7 @@
   "agentBtn": "agent",
   "tags": "tags",
   "informationSent": "Information Sent!",
-  "confirmed": "confirmed",
+  "Confirmed": "confirmed",
   "cellPhone": "Cell phone:",
   "oxxoInfo": "OXXO INFO:",
   "street": "Street:",
