--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -175,7 +175,7 @@
   "agentBtn": "agente",
   "tags": "tags",
   "informationSent": "¡Información enviada!",
-  "confirmed": "confirmado",
+  "Confirmed": "confirmado",
   "cellPhone": "Celular:",
   "oxxoInfo": "INFO OXXO:",
   "street": "Calle:",
