--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -175,7 +175,7 @@
   "agentBtn": "agent",
   "tags": "tags",
   "informationSent": "Information envoyée!",
-  "confirmed": "confirmé",
+  "Confirmed": "confirmé",
   "cellPhone": "Téléphone:",
   "oxxoInfo": "INFO OXXO:",
   "street": "Rue:",
